--- a/movie-search/public/index.html
+++ b/movie-search/public/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="index.pack.js"></script>
+        <script src="/static/js/main.chunk.js"></script>
     </body>
 </html>
